--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="on991mF2H_RHb4YINExmu8qVmxvStlR8B03XSB0eJ8w" />
-    <title>Zapply | Elite Tech Jobs for New Grads</title>
-    <meta name="description" content="825+ verified software engineering positions from elite tech companies. Daily updates from FAANG, unicorns, and top startups.">
+    <title>New Grad Software Engineering Jobs 2026 | Zapply</title>
+    <meta name="description" content="250+ verified entry-level software engineering positions updated every 15 minutes. FAANG, unicorns, and top startups.">
+    <link rel="canonical" href="https://zapplyjobs.github.io/New-Grad-Software-Engineering-Jobs-2026/" />
+    <meta property="og:title" content="New Grad Software Engineering Jobs 2026 | Zapply" />
+    <meta property="og:description" content="250+ verified entry-level software engineering positions updated every 15 minutes. FAANG, unicorns, and top startups." />
+    <meta property="og:url" content="https://zapplyjobs.github.io/New-Grad-Software-Engineering-Jobs-2026/" />
+    <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -687,8 +692,8 @@
                         </svg>
                         Discord
                     </a>
-                    <a href="https://github.com/zapplyjobs/New-Grad-Jobs-by-Zapply" class="btn btn-secondary">GitHub</a>
-                    <a href="https://github.com/zapplyjobs/New-Grad-Jobs-by-Zapply" class="btn btn-primary">View Jobs</a>
+                    <a href="https://github.com/zapplyjobs/New-Grad-Software-Engineering-Jobs-2026" class="btn btn-secondary">GitHub</a>
+                    <a href="https://github.com/zapplyjobs/New-Grad-Software-Engineering-Jobs-2026" class="btn btn-primary">View Jobs</a>
                 </div>
             </div>
         </div>
@@ -711,7 +716,7 @@
                 </p>
 
                 <div class="hero-actions">
-                    <a href="https://github.com/zapplyjobs/New-Grad-Jobs-by-Zapply" class="btn btn-primary btn-hero">
+                    <a href="https://github.com/zapplyjobs/New-Grad-Software-Engineering-Jobs-2026" class="btn btn-primary btn-hero">
                         Explore Jobs
                     </a>
                     <a href="https://discord.gg/yKWw28q7Yq" class="btn btn-discord btn-hero">
@@ -720,7 +725,7 @@
                         </svg>
                         Join Discord
                     </a>
-                    <a href="https://github.com/zapplyjobs/New-Grad-Jobs-by-Zapply" class="btn btn-secondary btn-hero">
+                    <a href="https://github.com/zapplyjobs/New-Grad-Software-Engineering-Jobs-2026" class="btn btn-secondary btn-hero">
                         ⭐ Star on GitHub
                     </a>
                 </div>
@@ -856,10 +861,10 @@
                 Join thousands of developers who've found their next opportunity through Zapply
             </p>
             <div class="cta-actions">
-                <a href="https://github.com/zapplyjobs/New-Grad-Jobs-by-Zapply" class="btn btn-white btn-hero">
+                <a href="https://github.com/zapplyjobs/New-Grad-Software-Engineering-Jobs-2026" class="btn btn-white btn-hero">
                     Browse Jobs
                 </a>
-                <a href="https://github.com/zapplyjobs/New-Grad-Jobs-by-Zapply" class="btn btn-outline btn-hero">
+                <a href="https://github.com/zapplyjobs/New-Grad-Software-Engineering-Jobs-2026" class="btn btn-outline btn-hero">
                     Star Project
                 </a>
             </div>
@@ -874,9 +879,9 @@
             <div class="footer-note">Updated every 15 minutes</div>
             
             <div class="footer-links">
-                <a href="https://github.com/zapplyjobs/New-Grad-Jobs-by-Zapply" class="footer-link">GitHub</a>
-                <a href="https://github.com/zapplyjobs/New-Grad-Jobs-by-Zapply/issues" class="footer-link">Issues</a>
-                <a href="https://github.com/zapplyjobs/New-Grad-Jobs-by-Zapply#readme" class="footer-link">About</a>
+                <a href="https://github.com/zapplyjobs/New-Grad-Software-Engineering-Jobs-2026" class="footer-link">GitHub</a>
+                <a href="https://github.com/zapplyjobs/New-Grad-Software-Engineering-Jobs-2026/issues" class="footer-link">Issues</a>
+                <a href="https://github.com/zapplyjobs/New-Grad-Software-Engineering-Jobs-2026#readme" class="footer-link">About</a>
             </div>
             
             <div class="footer-meta">
