--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
         setTimeout(typeEffect, 1000);
 
         // Dynamic stats from current_jobs.json
-        fetch('.github/data/current_jobs.json')
+        fetch('https://raw.githubusercontent.com/zapplyjobs/New-Grad-Software-Engineering-Jobs-2026/main/.github/data/current_jobs.json')
             .then(r => r.json())
             .then(jobs => {
                 const count = jobs.length;
